# Enter

./: .gitignore  .layout_memory.json  ANALISE_ERROS.md  ANALISE_PROFUNDA.md  CAUSAS_RAIZ_ERROS.md  CORRECOES_GENERALISTAS.md  DOCUMENTACAO_SRC.md  INSTALLATION.md  PLANO_ACAO_CORRECOES.md  PLANO_ACAO_IDENTIFICACAO_CORRECAO.md  PLANO_MUDANCAS_V3.md  PROMPT_V1.0.md  README.md  README_UI.md  RESUMO_CORRECOES_APLICADAS.md  RESUMO_EXECUTIVO_PLANO_ACAO.md  RESUMO_RESULTADOS_ITERACOES.md  START_UI.md  STATUS.md  STATUS_CORRECOES.md  TEST_RESULTS_V3.md  VERSION_1.0_CHECKLIST.md  comparison_all_pdfs_complete.json  comparison_all_pdfs_fixed.json  comparison_final.json  comparison_final_v2.json  comparison_iteration_7.json  comparison_report.json  debug_full.txt  debug_oab_1.json  debug_oab_1_final.json  debug_oab_1_fixed.json  debug_oab_1_v2.json  debug_oab_1_v3.json  debug_output.txt  error_analysis.json  ground_truth.json  oab_1_graph_overlay.html  orthogonal_graph_oab_1.html  orthogonal_graph_tela_sistema_1.html  (+40 more)
backend/: README.md  requirements.txt
configs/: augment.yaml  embedding.yaml  layout.yaml  llm.yaml  memory.yaml  runtime.yaml  secrets.yaml.example  tables.yaml
frontend/: README.md  SETUP.md  package-lock.json  package.json  start.ps1  tailwind.config.js
scripts/: README_API.md  analyze_char_width.py  analyze_errors.py  analyze_results.py  api_server.py  batch_extract.py  batch_process.py  benchmark_imports.py  build_token_graph.py  build_token_graph_clean.py  check_bbox_accuracy.py  check_setup.ps1  check_setup.sh  check_token0.py  cleanup_dev_branch.py  (+56 more)
(+138 files in other folders)
